docs/debug/build/crossbeam-utils-ec58b601ba9d4f43/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     |
    ::: /home/rootster/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:3065:1
     |
3065 | / atomic_int! {
3066 | |     cfg(target_has_atomic = "16"),
3067 | |     cfg(target_has_atomic_equal_alignment = "16"),
3068 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
3080 | |     u16 AtomicU16
3081 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
